--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "commander": "^11.1.0",
+    "crypto-js": "^4.2.0",
     "express": "^4.18.2",
     "fs-extra": "^11.2.0",
     "gaze": "^1.1.3",
     "glob": "^10.3.10",
     "joi": "^17.11.0",
     "multilang-extract-comments": "^0.4.0",
+    "node-fetch": "^3.3.2",
     "prettier": "^2.8.8",
     "socket.io": "^4.7.3",
     "sucrase": "^3.34.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/express": "^4.17.21",
     "@types/fs-extra": "^11.0.4",
     "@types/gaze": "^1.1.5",
